<resources>
    <string name="app_name">Art Keeper</string>
    <string name="profile">Profilo</string>
    <string name="welcome_user">Benvenuto, %s</string>
    <string name="login_error">È necessario effettuare il login</string>
    <string name="cancel_registration">Annullare registrazione?</string>
    <string name="hint_textview_nickname">Eventuali spazi bianchi verranno rimossi</string>
    <string name="value_not_valid">Valore non consentito</string>
    <string name="no_connection">Connessione assente</string>
    <string name="loading">Operazione in corso…</string>
    <string name="home">Home</string>
    <string name="add_post">Nuovo post</string>
    <string name="settings">Impostazioni</string>
    <string name="change_info">Aggiorna informazioni profilo</string>
    <string name="change_img_profile">Cambia immagine del profilo</string>
    <string name="add_son">Aggiungi figlio</string>
    <string name="logout">Logout</string>
    <string name="empty_field">Il campo è vuoto</string>
    <string name="sketched_by">Disegnato da: %s</string>
    <string name="description">Descrizione</string>
    <string name="pick_from_gallery">Galleria</string>
    <string name="pick_from_camera">Fotocamera</string>
    <string name="select_son">Chi ha disegnato?</string>
    <string name="error_photo_post">È necessario inserire una foto per proseguire</string>
    <string name="failed_sharing">Condivisione del post fallita</string>
    <string name="success_sharing">Condivisione del post riusciuta</string>
    <string name="delete">Annulla</string>
    <string name="share">Pubblica</string>
    <string name="cancel_post">Cancellare il post?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="folder_image">"ArtKeeperImages"</string>
    <string name="num_post">%s post</string>
    <string name="name">Nome</string>
    <string name="last_name">Cognome</string>
    <string name="nickname">Nickname</string>
    <string name="confirm">Conferma</string>
    <string name="save">Salva</string>
    <string name="num_follower">%s</string>
    <string name="num_notifications">%s</string>
    <string name="rmv_son">Rimuovere figlio</string>
    <string name="delete_account">Cancellare account?</string>
    <array name="choice">
        <item>Fotocamera</item>
        <item>Galleria</item>
    </array>
    <string name="stop_following">Smetti di seguire</string>
    <string name="follow">Segui</string>
    <string name="title_pending_request_Fragment">Richieste di amicizia</string>
    <string name="invalid_last_name">Cognome non valido</string>
    <string name="invalid_name">Nome non valido</string>
    <string name="qn_rmv_son">Seleziona il figlio da rimuovere</string>
    <string name="qn_delete_account">Sicuro di voler procedere?</string>
    <string name="retry_to_delete">Operazione sensibile. Effettua il login</string>
    <string name="channel_name">Richieste di amicizia</string>
    <string name="channel_id">ArtKeeper</string>
    <string name="share_post">Condividi il post</string>
</resources>