<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.SettingsFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_info"
        android:text="@string/change_info"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_img_profile"
        android:text="@string/change_img_profile"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_son"
        android:text="@string/add_son"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rmv_son"
        android:text="@string/rmv_son"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_account"
        android:text="@string/delete_account"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:text="@string/logout"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

</LinearLayout>