<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.artkeeper.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left" />
        <action
            android:id="@+id/action_profileFragment_to_pendingRequestFragment"
            app:destination="@id/pendingRequestFragment">
            <argument
                android:name="title"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
            <argument
                android:name="uidList"
                android:defaultValue="@null"
                app:argType="string[]"
                app:nullable="true" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.artkeeper.ui.profile.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_logout_move_to_home"
            app:destination="@+id/home"
            app:launchSingleTop="true"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_settingsFragment_to_updateInfoFragment"
            app:destination="@id/updateInfoFragment"
            app:enterAnim="@anim/fui_slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/updateInfoFragment"
        android:name="com.example.artkeeper.ui.profile.UpdateInfoFragment"
        android:label="Nuove informazioni profilo">
        <action
            android:id="@+id/action_updateInfoFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.artkeeper.ui.login.LoginFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:enterAnim="@anim/fui_slide_in_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_mainFragment"
            app:destination="@+id/home"
            app:launchSingleTop="true"
            app:popUpTo="@id/profile"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.artkeeper.ui.login.RegistrationFragment"
        android:label="Registrati"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_registrationFragment_to_home"
            app:destination="@+id/home"
            app:popUpTo="@id/profile"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/pendingRequestFragment"
        android:name="com.example.artkeeper.ui.profile.PendingRequestFragment"
        android:label="@string/title_pending_request_Fragment">
        <action
            android:id="@+id/action_pendingRequestFragment_to_visitedUserProfileFragment"
            app:destination="@id/visitedUserProfileFragment2"
            app:popUpTo="@id/profileFragment">
            <argument
                android:name="uidRequest"
                android:defaultValue="null"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/visitedUserProfileFragment2"
        android:name="com.example.artkeeper.ui.VisitedUserProfileFragment"
        android:label="@string/profile" />
</navigation>